--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
                         <i class="fa-solid fa-bell"></i>
                     </a>
                 </div>
+                <div>
+                    <a href="">
+                        <i class="fa-solid fa-user"></i>
+                    </a>
+                </div>
 
             </section>
         </header>
@@ -210,12 +215,12 @@
                 <a href="" class="fd">الأسئلة الشائعة</a>
                 <a href="" class="fd">ضمان الحقوق</a>
                 <a href="" class="fd">مركز المساعدة</a>
-               
+
             </div>
             <div>
                 <h3>مدونة خمسات</h3>
                 <a href="" class="fd">تعرّف إلى كيفية رسم شخصيات كرتونية مميزة</a>
-                <a href=""class="fd">ما هي خطوات الترجمة من العربية إلى الإنجليزية؟</a>
+                <a href="" class="fd">ما هي خطوات الترجمة من العربية إلى الإنجليزية؟</a>
                 <a href="" class="fd">تصميم إعلانات سناب شات: دليلك لإطلاق حملة إعلانية مميزة</a>
                 <a href="" class="fd">كل ما تحتاج إلى معرفته برمجة تطبيقات الجوال</a>
                 <a href="" class="fd">كيفية تصميم فاتورة مميزة لعملك التجاري</a>
@@ -229,17 +234,77 @@
             </div>
             <div>
                 <h3>تابعنا</h3>
-                    <div class="social">
-                        <a href="">
-                            <i class="fa-brands fa-square-facebook fa-2xl"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa-brands fa-square-twitter fa-2xl"></i>
-                        </a>
-                    </div>
-                
+                <div class="social">
+                    <a href="">
+                        <i class="fa-brands fa-square-facebook fa-2xl"></i>
+                    </a>
+                    <a href="">
+                        <i class="fa-brands fa-square-twitter fa-2xl"></i>
+                    </a>
+                </div>
+
             </div>
         </section>
+        <footer class="footer1">
+            <div>
+                <a href="">شروط الاستخدام</a>
+                <a href="">بيان الخصوصية</a>
+                <a href="">المستويات</a>
+                <a href="">التسويق بالعمولة</a>
+            </div>
+            <div>
+                <p>© 2023 Sayed El-Senosy. All rights reserved.</p>
+            </div>
+        </footer>
+        <footer class="footer2">
+            <div class="hasob-logo">
+                <a href="">
+                    <img src="img/hsoub-logo.svg" alt="" width="180px" height="100px">
+                </a>
+            </div>
+            <div class="footer-dt">
+                <div class="footer-dt1">
+                    <a href="">
+                        <h2>أنا</h2>
+                        <p>أداة واحدة لإدارة مشاريعك وفريقك</p>
+                    </a>
+                    <a href="">
+                        <h2>مستقل</h2>
+                        <p>أكبر منصة عمل حر في العالم العربي</p>
+                    </a>
+                    <a href="">
+                        <h2>خمسات</h2>
+                        <p>سوق بيع وشراء الخدمات المصغرة</p>
+                    </a>
+                    <a href="">
+                        <h2>بيكاليكا</h2>
+                        <p>متجر القوالب والمنتجات الرقمية</p>
+                    </a>
+                    <a href="">
+                        <h2>بعيد</h2>
+                        <p>موقع توظيف الخبراء عن بعد</p>
+                    </a>
+                    <a href="">
+                        <h2>زيتون</h2>
+                        <p>برنامج خدمة العملاء الأكثر بساطة</p>
+                    </a>
+                </div>
+                <div class="footer-dt1">
+                    <a href="">
+                        <h2>أكاديمية حسوب</h2>
+                        <p>دورات احترافية لتطوير مستقبلك</p>
+                    </a>
+                    <a href="">
+                        <h2>موسوعة حسوب</h2>
+                        <p>المرجع الشامل للمطورين العرب</p>
+                    </a>
+                    <a href="">
+                        <h2>حسوب I/O</h2>
+                        <p>مجتمع للنقاش الهادف والموضوعي</p>
+                    </a>
+                </div>
+            </div>
+        </footer>
     </body>
 
 </html>
